<resources>
    <string name="app_name">Medielwalk</string>
    <string name="title_activity_empezar">Empezar</string>
    <string name="conectatecno">Conectándo tu cuerpo con la tecnología.</string>
    <string name="marca">Keep Burning</string>
    <string name="empezar">Empezar</string>
    <string name="registrate">¿No eres Spooky? Regístrate</string>
    <string name="descubreaventura">Descubre la aventura hoy</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="tuuser">Usuario</string>
    <string name="tupass">Contraseña</string>
    <string name="resumendia">Resumen del día</string>
    <string name="debescaminar">Estos son tus logros que has realizado en el día</string>
    <string name="registro">Registro</string>
    <string name="monedas">Monedas recogidas</string>
    <string name="fantasmas">Monstruos comidos</string>
    <string name="pasos">Pasos realizados</string>
    <string name="edad">Edad</string>
    <string name="pais">País</string>
    <string name="tienda">Tienda</string>
    <string name="jugadores">Jugadores</string>
    <string name="entrar">Entrar</string>
    <string name="sincuenta">¿Aún no tienes cuenta? Regístrate</string>
    <string name="concuenta">¿Ya tienes una cuenta? Inicia Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="jugar">Jugar</string>
    <string name="genero">Género</string>
    <string name="resumen">Resumen</string>
    <string name="credito">Créditos</string>
    <string name="telefono">Nro Teléfono </string>
    <string name="facultad">Facultad</string>
    <string name="gmasculino">Masculino</string>
    <string name="gfemenino">Femenino</string>
    <string name="mensaje">Mensajes</string>
    <string name="reto">Retos</string>
    <string name="calorias">Calorias</string>
    <string name="qcalorias">Quemar Calorias</string>
    <string name="sociales">Redes Sociales</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
