<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@color/back">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:drawablePadding="0dp"
        app:srcCompat="@drawable/up" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/iniciarsesion"
        android:textColor="@color/yellowLogo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/marca"
        android:drawablePadding="0dp"
        app:srcCompat="@drawable/keep2" />



        <EditText
            android:id="@+id/txtuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/redondear"
            android:ems="10"
            android:hint="@string/tuuser"
            android:inputType="textPersonName"
            android:textColor="#333333"
            android:textColorHint="@android:color/darker_gray"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/txtpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/redondear"
            android:ems="10"
            android:hint="@string/tupass"
            android:inputType="textPassword"
            android:textColor="#333333"
            android:textColorHint="@android:color/darker_gray"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/botoniniciarsesion"
            android:text="Entrar"
            android:textColor="@color/fontone"
            android:textStyle="bold"
            android:onClick="logear"
            />


        <ProgressBar
            android:id="@+id/pro1"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

    <TextView
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:onClick="registrar"
        android:text="@string/sincuenta"
        android:textColor="@color/fontone"
        android:textSize="16sp" />

    </LinearLayout>
