<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/back">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            android:background="@color/back">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:drawablePadding="0dp"
                app:srcCompat="@drawable/runningman" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtname"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:text="Nombre:"
                android:textColor="@color/fontone"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/redondear"
                android:ems="10"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#333333"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="normal" />


        </LinearLayout>
            <TextView
                android:id="@+id/txGenero"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/greenlow"
                android:text="@string/genero"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/grupoGenero"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/fontone"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/fontone"
                        android:layout_weight="1"
                        android:text="@string/gfemenino"
                        app:buttonTint="@color/greenlow"/>

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/fontone"
                        android:text="@string/gmasculino"
                        app:buttonTint="@color/greenlow"/>

                </RadioGroup>
            </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txEdad"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:text="Edad"
                android:textColor="@color/fontone"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/redondear"
                android:ems="10"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#333333"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="normal" />
        </LinearLayout>






            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txPeso"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:text="Peso"
                    android:textColor="@color/fontone"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/peso"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/redondear"
                    android:ems="10"
                    android:hint="Peso Ej:40"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="#333333"
                    android:textColorHint="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtcm"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/fontone"
                    android:text="Kg"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txAlture"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:text="Altura"
                    android:textColor="@color/fontone"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/altura"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/redondear"
                    android:ems="10"
                    android:hint="Peso Ej:40"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="#333333"
                    android:textColorHint="@android:color/darker_gray"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtKg"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/fontone"
                    android:text="cm"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/pro3"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_weight="1"
                tools:visibility="invisible" />


            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/botonregistro"
                android:text="Actualizar"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
